--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@types/inquirer": "^7.3.1",
+    "immer": "^7.0.14",
     "inquirer": "^7.3.3",
     "typescript": "^4.0.5"
   },
