--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "build": "rm -rf build/ && tsc",
-    "start": "node build/index.js"
+    "start": "node build/index.js",
+    "test": "jest"
   },
   "keywords": [
     "twilight",
@@ -21,18 +22,21 @@
   "dependencies": {
     "@types/inquirer": "^7.3.1",
     "immer": "^7.0.14",
-    "inquirer": "^7.3.3",
-    "typescript": "^4.0.5"
+    "inquirer": "^7.3.3"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
     "eslint": "^7.12.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0"
+    "pretty-quick": "^3.1.0",
+    "ts-jest": "^26.4.4",
+    "typescript": "^4.0.5"
   }
 }
