--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "rm -rf build/ && tsc",
     "start": "node build/index.js",
-    "test": "jest"
+    "test": "jest",
+    "pretty-staged": "pretty-quick --staged"
   },
   "keywords": [
     "twilight",
@@ -14,14 +15,9 @@
   ],
   "author": "Lumi Kallioniemi",
   "license": "MIT",
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  },
   "dependencies": {
     "@types/inquirer": "^7.3.1",
-    "immer": "^7.0.14",
+    "immer": "^9.0.12",
     "inquirer": "^7.3.3"
   },
   "devDependencies": {
@@ -29,10 +25,10 @@
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
-    "eslint": "^7.12.1",
+    "eslint": "^8.10.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "pretty-quick": "^3.1.0",
